# glow

./: CMakeLists.txt  CMakePresets.json  README.md  VERSION  glowConfig.cmake.in  install.cmake  iri90.f  meson.build  msise00_data.f  mzgrid.f90  nrlmsise00.f
.github/workflows/: ci.yml  ci_linux.yml  ci_macos.yml  ci_windows.yml
cmake/: compilers.cmake  glow.cmake  install.cmake  options.cmake
